<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dim_padding_big"
    tools:context=".activity.SplashActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/splash_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_splash_icon_size"
                android:padding="@dimen/dim_padding_big"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <ProgressBar
                android:id="@+id/progress_splash"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_margin="@dimen/dim_margin"
                android:indeterminate="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dim_padding_really_big"
                android:paddingEnd="@dimen/dim_padding_really_big"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="?colorAccent"
                android:textSize="@dimen/dim_text_title_splash"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_padding_big"
            android:drawablePadding="@dimen/dim_padding_small"
            android:text="@string/app_dev"
            android:textAlignment="center"
            android:textSize="@dimen/dim_text_subtitle"
            app:drawableStartCompat="@drawable/ic_jesusd0897_icon"
            app:drawableTint="?itemTextColor" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_copyright"
            android:textAlignment="center"
            android:textColor="?android:textColorSecondary" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>